# omniagent

./: .gitignore  README.md  package-lock.json  package.json  pytest.ini
apps/api/: .dockerignore  .env.example  Dockerfile  _tmp_patch.py  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py  0002_idempotency_keys.py  0003_auth_and_tenant.py  0004_vector_memory_tenant.py
apps/api/src/omniagent/: __init__.py  main.py
apps/api/tests/: __init__.py  conftest.py  test_pytest_init.py
apps/api/tests/connectors/: __init__.py  test_connector_manager.py
apps/api/tests/integration/: __init__.py  test_api_health.py  test_api_smoke.py
apps/api/tests/unit/: test_agent_runtime.py  test_application_sender_agent.py  test_auth_strict_prod.py  test_business_observability.py  test_business_value.py  test_causality_sprint.py  test_contact_enrichment_agent.py  test_cv_agent.py  test_determinism_sprint.py  test_domain.py  test_emploi_agents.py  test_emploi_audit.py  test_event_bus.py  test_event_hardening.py  test_event_store.py  test_event_unification.py  test_filtering_matching_agent.py  test_job_workflow_vague_a.py  test_job_workflow_vague_b.py  test_job_workflow_vague_c.py  test_lettre_requirement_agent.py  test_memory_governance.py  test_mission_controller_agent.py  test_model_router.py  test_multi_source_backend.py  test_multi_source_breaker.py  test_observability_costs.py  test_orchestrator.py  test_orchestrator_determinism.py  test_orchestrator_v3.py  test_orchestrator_workflow_security.py  test_plugin_system.py  (+13 more)
(+216 files in other folders)
